force-app/main/default/objects/Sup_Bra_Distributor__c/Sup_Bra_Distributor__c.object-meta.xml
<CustomObject>
    <label>Distributed Brand</label>
    <nameField>
        <label>Distributed Brand Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distributed Brands</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>