force-app/main/default/objects/Sup_Bra_Distributor__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <referenceTo>Brand__c</referenceTo>
    <relationshipName>Sup_Bra_Suppliers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>