force-app/main/default/objects/Sup_Bra_Distributor__c/fields/Status_BDate__c.field-meta.xml
<CustomField>
    <fullName>Status_BDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Status Begin Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>