force-app/main/default/objects/Sup_Bra_Distributor__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>Supplier__c</referenceTo>
    <relationshipName>Sup_Bra_Suppliers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>